Use Apache Nexus repo for -SNAPSHOT versions of the quickstart
git-svn-id: https://svn.apache.org/repos/asf/wicket/common/site/trunk/_site@1060043 13f79535-47bb-0310-9956-ffa450edef68

--- a/start/quickstart.html
+++ b/start/quickstart.html
@@ -177,7 +177,7 @@
 		else
 			cmd = 'mvn archetype:generate -DarchetypeGroupId=org.apache.wicket -DarchetypeArtifactId=wicket-archetype-quickstart -DarchetypeVersion=' + version + ' -DgroupId=' + groupId + ' -DartifactId=' + artifactId;						
 
-		if (version.match(/.*SNAPSHOT/)) cmd += ' -DarchetypeRepository=http://wicketstuff.org/maven/repository/'; 
+		if (version.match(/.*SNAPSHOT/)) cmd += ' -DarchetypeRepository=https://repository.apache.org/content/repositories/snapshots/'; 
 		cmd += ' -DinteractiveMode=false'; 
 		document.getElementById("cmdLine").value = cmd;
 	}
