--- a/index.html
+++ b/index.html
@@ -164,6 +164,22 @@
 
 <p>Wicket is released under the <a href='http://www.apache.org/licenses/LICENSE-2.0.html'>Apache License, Version 2.0</a>.</p>
 
+<h1 id='wicket_15rc2_released'><a href='/2011/02/25/wicket-1.5-rc2-released.html'>Wicket 1.5-rc2 released</a></h1>
+<p>The Wicket Team is proud to introduce the second Release Candidate in Wicket 1.5 series. See the changelog for the list of bug fixes and improvements done between 1.5-RC1 and 1.5-rc2</p><p>More detailed migration notes are available on our <a href='https://cwiki.apache.org/WICKET/migration-to-wicket-15.html'>Migrate to 1.5 Wiki Page</a></p><p>Release Artifacts:</p><ul>
+<li><a href='http://svn.apache.org/repos/asf/wicket/releases/wicket-1.5-rc2'>Subversion tag</a></li>
+
+<li><a href='https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12310561&amp;version=12316059'>Changelog</a></li>
+
+<li>To use in Maven:</li>
+</ul><div class='highlight'><pre><code class='xml'><span class='nt'>&lt;dependency&gt;</span>
+    <span class='nt'>&lt;groupId&gt;</span>org.apache.wicket<span class='nt'>&lt;/groupId&gt;</span>
+    <span class='nt'>&lt;artifactId&gt;</span>wicket-core<span class='nt'>&lt;/artifactId&gt;</span>
+    <span class='nt'>&lt;version&gt;</span>1.5-rc2<span class='nt'>&lt;/version&gt;</span>
+<span class='nt'>&lt;/dependency&gt;</span>
+</code></pre>
+</div><ul>
+<li>Download the <a href='http://www.apache.org/dyn/closer.cgi/wicket/1.5-rc2'>full distribution</a> (including source)</li>
+</ul>
 <h1 id='wicket_1416_released'><a href='/2011/02/25/wicket-1.4.16-released.html'>Wicket 1.4.16 released</a></h1>
 <p>This is sixteenth release of the Wicket 1.4.x series. This is primarily a minor bugfix release on the 1.4.x (stable) branch.</p><ul>
 <li><a href='http://svn.apache.org/repos/asf/wicket/releases/wicket-1.4.16'>Subversion tag</a></li>
@@ -179,33 +195,13 @@
 </code></pre>
 </div><ul>
 <li>Download the <a href='http://www.apache.org/dyn/closer.cgi/wicket/1.4.16'>full distribution</a> (including source)</li>
-</ul>
-<h1 id='wicket_15rc1_released'><a href='/2011/01/22/wicket-1.5-RC1-released.html'>Wicket 1.5-RC1 released</a></h1>
-<p>The Wicket Team is proud to introduce the first Release Candidate in Wicket 1.5 series. The 1.5 series provides the following major improvements:</p><ul>
-<li>A more powerful and flexible request processing pipeline</li>
-
-<li>Intercomponent event mechanism</li>
-
-<li>Improved configuration</li>
-
-<li>More flexible markup loading</li>
-
-<li>Better proxy support (x-forwarded-for header)</li>
-</ul><p>More detailed migration notes are available on our <a href='https://cwiki.apache.org/WICKET/migration-to-wicket-15.html'>Migrate to 1.5 Wiki Page</a></p><p>Release Artifacts:</p><ul>
-<li><a href='http://svn.apache.org/repos/asf/wicket/releases/wicket-1.5-RC1'>Subversion tag</a></li>
-
-<li><a href='https://issues.apache.org/jira/secure/IssueNavigator.jspa?reset=true&amp;&amp;pid=12310561&amp;fixfor=12315483&amp;sorter/field=issuekey&amp;sorter/order=DESC'>Changelog</a></li>
-
-<li>To use in Maven:</li>
-</ul><div class='highlight'><pre><code class='xml'><span class='nt'>&lt;dependency&gt;</span>
-    <span class='nt'>&lt;groupId&gt;</span>org.apache.wicket<span class='nt'>&lt;/groupId&gt;</span>
-    <span class='nt'>&lt;artifactId&gt;</span>wicket<span class='nt'>&lt;/artifactId&gt;</span>
-    <span class='nt'>&lt;version&gt;</span>1.5-RC1<span class='nt'>&lt;/version&gt;</span>
-<span class='nt'>&lt;/dependency&gt;</span>
-</code></pre>
-</div><ul>
-<li>Download the <a href='http://www.apache.org/dyn/closer.cgi/wicket/1.5-RC1'>full distribution</a> (including source)</li>
 </ul><h1>Older news items</h1><ul>
+
+
+<li>
+	<a href='/2011/01/22/wicket-1.5-RC1-released.html'>Wicket 1.5-RC1 released</a> - <span>22 Jan 2011</span><br />
+	The Wicket Team is proud to introduce the first Release Candidate in Wicket 1.5 series. The 1.5 series provides the following major improvements: A more...
+	<a href='/2011/01/22/wicket-1.5-RC1-released.html'>more</a></li>
 
 
 <li>
@@ -260,12 +256,6 @@
 	<a href='/2010/08/24/peter-ertl-committer.html'>Peter Ertl is a Wicket team member</a> - <span>24 Aug 2010</span><br />
 	The Apache Wicket team is proud to have Peter Ertl as a new member to the team of developers. Peter has been active in our...
 	<a href='/2010/08/24/peter-ertl-committer.html'>more</a></li>
-
-
-<li>
-	<a href='/2010/08/11/wicket-1.5-M1-released.html'>Wicket 1.5-M1 released</a> - <span>11 Aug 2010</span><br />
-	This is the first milestone of the new 1.5.x Wicket series. The focus of 1.5.x is to provide our users with a more powerful and...
-	<a href='/2010/08/11/wicket-1.5-M1-released.html'>more</a></li>
 
 </ul>
 <h1 id='books_about_wicket'>Books about Wicket</h1>
