corrected some marketing speak from PACKT's side
git-svn-id: https://svn.apache.org/repos/asf/wicket/common/site/trunk/_site@1085456 13f79535-47bb-0310-9956-ffa450edef68

--- a/learn/books/awc.html
+++ b/learn/books/awc.html
@@ -152,7 +152,7 @@
 
 <p>You will learn how to integrate with client-side technologies such as JavaScript libraries or Flash components, which will help you to build your application faster. You will discover how to use Wicket paradigms to factor out commonly used code into custom Components, which will reduce the maintenance cost of your application, and how to leverage the existing Wicket Components to make your own code simpler.</p>
 
-<p>A straightforward Cookbook with over 75 highly focused practical recipes to make your web application development easier with the Wicket web framework</p>
+<p>A straightforward Cookbook with highly focused practical recipes to make your web application development easier with the Wicket web framework</p>
 
 <h2 id='what_you_will_learn_from_this_book'>What you will learn from this book</h2>
 
