Added better image for Igor's book
git-svn-id: https://svn.apache.org/repos/asf/wicket/common/site/trunk/_site@1085472 13f79535-47bb-0310-9956-ffa450edef68

--- a/index.html
+++ b/index.html
@@ -166,39 +166,35 @@
 
 <h1 id='wicket_15rc2_released'><a href='/2011/02/25/wicket-1.5-rc2-released.html'>Wicket 1.5-rc2 released</a></h1>
 <p>The Wicket Team is proud to introduce the second Release Candidate in Wicket 1.5 series. See the changelog for the list of bug fixes and improvements done between 1.5-RC1 and 1.5-rc2</p><p>More detailed migration notes are available on our <a href='https://cwiki.apache.org/WICKET/migration-to-wicket-15.html'>Migrate to 1.5 Wiki Page</a></p><p>Release Artifacts:</p><ul>
-<li>
-<p><a href='http://svn.apache.org/repos/asf/wicket/releases/wicket-1.5-rc2'>Subversion tag</a></p>
-</li>
+<li><a href='http://svn.apache.org/repos/asf/wicket/releases/wicket-1.5-rc2'>Subversion tag</a></li>
 
-<li>
-<p><a href='https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12310561&amp;version=12316059'>Changelog</a></p>
-</li>
+<li><a href='https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12310561&amp;version=12316059'>Changelog</a></li>
 
-<li>
-<p>To use in Maven:</p>
-</li>
-
-<li>
-<p>Download the <a href='http://www.apache.org/dyn/closer.cgi/wicket/1.5-rc2'>full distribution</a> (including source)</p>
-</li>
+<li>To use in Maven:</li>
+</ul><div class='highlight'><pre><code class='xml'><span class='nt'>&lt;dependency&gt;</span>
+    <span class='nt'>&lt;groupId&gt;</span>org.apache.wicket<span class='nt'>&lt;/groupId&gt;</span>
+    <span class='nt'>&lt;artifactId&gt;</span>wicket-core<span class='nt'>&lt;/artifactId&gt;</span>
+    <span class='nt'>&lt;version&gt;</span>1.5-rc2<span class='nt'>&lt;/version&gt;</span>
+<span class='nt'>&lt;/dependency&gt;</span>
+</code></pre>
+</div><ul>
+<li>Download the <a href='http://www.apache.org/dyn/closer.cgi/wicket/1.5-rc2'>full distribution</a> (including source)</li>
 </ul>
 <h1 id='wicket_1416_released'><a href='/2011/02/25/wicket-1.4.16-released.html'>Wicket 1.4.16 released</a></h1>
 <p>This is sixteenth release of the Wicket 1.4.x series. This is primarily a minor bugfix release on the 1.4.x (stable) branch.</p><ul>
-<li>
-<p><a href='http://svn.apache.org/repos/asf/wicket/releases/wicket-1.4.16'>Subversion tag</a></p>
-</li>
+<li><a href='http://svn.apache.org/repos/asf/wicket/releases/wicket-1.4.16'>Subversion tag</a></li>
 
-<li>
-<p><a href='https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12310561&amp;version=12316020'>Changelog</a></p>
-</li>
+<li><a href='https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12310561&amp;version=12316020'>Changelog</a></li>
 
-<li>
-<p>To use in Maven:</p>
-</li>
-
-<li>
-<p>Download the <a href='http://www.apache.org/dyn/closer.cgi/wicket/1.4.16'>full distribution</a> (including source)</p>
-</li>
+<li>To use in Maven:</li>
+</ul><div class='highlight'><pre><code class='xml'><span class='nt'>&lt;dependency&gt;</span>
+    <span class='nt'>&lt;groupId&gt;</span>org.apache.wicket<span class='nt'>&lt;/groupId&gt;</span>
+    <span class='nt'>&lt;artifactId&gt;</span>wicket<span class='nt'>&lt;/artifactId&gt;</span>
+    <span class='nt'>&lt;version&gt;</span>1.4.16<span class='nt'>&lt;/version&gt;</span>
+<span class='nt'>&lt;/dependency&gt;</span>
+</code></pre>
+</div><ul>
+<li>Download the <a href='http://www.apache.org/dyn/closer.cgi/wicket/1.4.16'>full distribution</a> (including source)</li>
 </ul><h1>Older news items</h1><ul>
 
 
@@ -265,7 +261,7 @@
 <h1 id='books_about_wicket'>Books about Wicket</h1>
 
 <p>The following books are published regarding Apache Wicket (click a cover to learn more about the book):</p>
-<a href='/learn/books/wia.html'><img src='/learn/books/wia.png' height='200px' /></a><a href='/learn/books/ewdww.html'><img src='/learn/books/ewdww.png' height='200px' /></a><a href='/learn/books/prowicket.html'><img src='/learn/books/prowicket.png' height='200px' /></a><a href='/learn/books/kwij.html'><img src='/learn/books/kwij.png' height='200px' /></a><a href='/learn/books/praxisbuchwicket.html'><img src='/learn/books/praxisbuchwicket.png' height='200px' /></a><a href='/learn/books/wicket-jp.html'><img src='/learn/books/wicket-jp.png' height='200px' /></a>
+<a href='/learn/books/awc.html'><img src='/learn/books/awc.png' height='200px' /></a><a href='/learn/books/wia.html'><img src='/learn/books/wia.png' height='200px' /></a><a href='/learn/books/ewdww.html'><img src='/learn/books/ewdww.png' height='200px' /></a><a href='/learn/books/prowicket.html'><img src='/learn/books/prowicket.png' height='200px' /></a><a href='/learn/books/kwij.html'><img src='/learn/books/kwij.png' height='200px' /></a><a href='/learn/books/praxisbuchwicket.html'><img src='/learn/books/praxisbuchwicket.png' height='200px' /></a><a href='/learn/books/wicket-jp.html'><img src='/learn/books/wicket-jp.png' height='200px' /></a>
 		</div>
         <div id="clearer"></div>
 		<div id="footer"><span>
