fixed typo, WICKET-3546
git-svn-id: https://svn.apache.org/repos/asf/wicket/common/site/trunk/_site@1086016 13f79535-47bb-0310-9956-ffa450edef68

--- a/help/index.html
+++ b/help/index.html
@@ -192,7 +192,7 @@
 <li>submit a patch fixing the bug! (We also buy you beer when we meet you if you submit bug fixes for memory leaks or performance related issues, if you can run a profiler on your test case and attach the output as a file (or zipped file if its huge) to the JIRA we can normally fix things much faster. e.g. run JProfiler or YourKit on your code and send us the output. To find memory leaks its quicker to resolve if you can tell us what classes are taking up all of the RAM; we can normally figure out whats wrong from that.</li>
 </ul>
 
-<h2 id='commerical_support'>Commerical Support</h2>
+<h2 id='commercial_support'>Commercial Support</h2>
 
 <p>The list of companies found at <a href='https://cwiki.apache.org/WICKET/companies-that-provide-services.html'>this wiki page</a> provide commercial services for Wicket which ranges from training courses, consultancy and even project development.</p>
 
