--- a/learn/books/ewdww.html
+++ b/learn/books/ewdww.html
@@ -144,7 +144,7 @@
 
 		<div id="contentbody">
 			<h1>Books — Enjoying Web Development with Wicket</h1>
-			<p>Enjoying Web Development with Wicket is written by Kent Tong and is self published. Currently only available as an e-book, a hard copy will come available later this year.</p>
+			<p>Enjoying Web Development with Wicket is written by Kent Tong and is self published.</p>
 
 <h2 id='description'>Description</h2>
 
@@ -156,13 +156,13 @@
 
 <h2 id='about_the_author'>About the author</h2>
 
-<p>Ka Iok Kent Tong is the manager of the IT department of the Macau Productivity and Technology Transfer Center. With a Master degree in Computer Science from the New South Wales University, Sydney, Australia and having won the &#8220;Macao Programming Competition (Open Category)&#8221; in 1992, Mr. Tong has been involved in professional software development, training and project management since 1993. He is the author of several popular books on web technologies including Enjoying Web Development with Tapestry and Developing Web Services with Apache Axis.</p>
+<p>Kent Ka Iok Tong is the manager of the IT department of the Macau Productivity and Technology Transfer Center. With a Master degree in Computer Science from the New South Wales University, Sydney, Australia and having won the &#8220;Macao Programming Competition (Open Category)&#8221; in 1992, Mr. Tong has been involved in professional software development, training and project management since 1993. He is the author of several popular books on web technologies including Developing Web Services with Apache CXF and Axis2. He has also created an open source project &#8220;Wicket Page Test&#8221; for unit testing Wicket pages.</p>
 
 <h2 id='book_details'>Book details</h2>
 <table>
 	<tr>
 		<th>Title</th>
-		<td>Enjoying Web Development with Wicket</td>
+		<td>Enjoying Web Development with Wicket (2nd edition)</td>
 	</tr>
 	<tr>
 		<th>Author</th>
@@ -170,7 +170,7 @@
 	</tr>
 	<tr>
 		<th>Version covered</th>
-		<td>Wicket 1.3</td>
+		<td>Wicket 1.4</td>
 	</tr>
 	<tr>
 		<th>URL</th>
@@ -178,11 +178,11 @@
 	</tr>
 	<tr>
 		<th>Paperback</th>
-		<td>~420 pages</td>
+		<td>~358 pages</td>
 	</tr>
 	<tr>
 		<th>Date</th>
-		<td>November, 2007</td>
+		<td>April, 2010</td>
 	</tr>
 	<tr>
 		<th>Language</th>
@@ -190,11 +190,11 @@
 	</tr>
 	<tr>
 		<th>ISBN-10</th>
-		<td>n/a</td>
+		<td>0557522463</td>
 	</tr>
 	<tr>
 		<th>ISBN-13</th>
-		<td>n/a</td>
+		<td>978-0557522460</td>
 	</tr>
 	<tr>
 		<th>Buy</th>
