WICKET-3635 Copy and paste error in news for 1.4.17
git-svn-id: https://svn.apache.org/repos/asf/wicket/common/site/trunk/_site@1095987 13f79535-47bb-0310-9956-ffa450edef68

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 <li>Download the <a href='http://www.apache.org/dyn/closer.cgi/wicket/1.5-RC3'>full distribution</a> (including source)</li>
 </ul>
 <h1 id='wicket_1417_released'><a href='/2011/04/02/wicket-1.4.17-released.html'>Wicket 1.4.17 released</a></h1>
-<p>This is sixteenth release of the Wicket 1.4.x series. This is primarily a minor bugfix release on the 1.4.x (stable) branch.</p><ul>
+<p>This is seventeenth release of the Wicket 1.4.x series. This is primarily a minor bugfix release on the 1.4.x (stable) branch.</p><ul>
 <li><a href='http://svn.apache.org/repos/asf/wicket/releases/wicket-1.4.17'>Subversion tag</a></li>
 
 <li><a href='https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12310561&amp;version=12316219'>Changelog</a></li>
