Added better descriptions for subprojects
git-svn-id: https://svn.apache.org/repos/asf/wicket/common/site/trunk/_site@1101818 13f79535-47bb-0310-9956-ffa450edef68

--- a/learn/projects/index.html
+++ b/learn/projects/index.html
@@ -147,23 +147,43 @@
 			<p>The Wicket team provides more than a component oriented web framework, we also provide additional projects that help you integrate with Java technologies such as Spring, Guice and Velocity. Check each project below to see if you can use it.</p>
 
 <ul>
-<li><a href='authroles.html'>Wicket Auth/Roles</a> - very basic security project enabling annotation based authorization for two roles: user and admin.</li>
+<li>
+<p><a href='authroles.html'>Wicket Auth/Roles</a> - very basic security project enabling annotation based authorization for two roles: user and admin.</p>
+</li>
 
-<li><a href='datetime.html'>Wicket Date/Time</a> -</li>
+<li>
+<p><a href='datetime.html'>Wicket Date/Time</a> -</p>
+</li>
 
-<li><a href='devutils.html'>Wicket Dev Utils</a> - utilities that improve developer productivity by opening up the internals of your Wicket application right inside the web UI.</li>
+<li>
+<p><a href='devutils.html'>Wicket Dev Utils</a> - utilities that improve developer productivity by opening up the internals of your Wicket application right inside the web UI.</p>
+</li>
 
-<li><a href='extensions.html'>Wicket Extensions</a> - additional components that are beyond the scope of the core Wicket framework. Contains components such as DataTable, MultiFileUpload, Rating component</li>
+<li>
+<p><a href='extensions.html'>Wicket Extensions</a> - additional components that are beyond the scope of the core Wicket framework. Contains components such as DataTable, MultiFileUpload, Rating component</p>
+</li>
 
-<li><a href='guice.html'>Wicket Guice</a> - inject Guice services in a Wicket compatible manner</li>
+<li>
+<p><a href='jmx.html'>Wicket JMX</a> - opens up the internals of Wicket through JMX beans</p>
+</li>
 
-<li><a href='ioc.html'>Wicket IoC</a> - base services for the Guice and Spring integrations</li>
+<li>
+<p><a href='ioc.html'>Wicket IoC</a> - base services for the Guice and Spring integrations</p>
+</li>
 
-<li><a href='jmx.html'>Wicket JMX</a> - opens up the internals of Wicket through JMX beans</li>
+<li>
+<p><a href='guice.html'>Wicket integration for Guice</a> - inject <a href='http://code.google.com/p/google-guice'>Guice</a> managed services in a Wicket compatible manner</p>
+</li>
 
-<li><a href='spring.html'>Wicket Spring</a> - inject Spring services in a Wicket compatible manner</li>
+<li>
+<p><a href='spring.html'>Wicket integration for Spring</a> - inject <a href='http://springsource.org'>Spring</a> managed services in a Wicket compatible manner</p>
+</li>
+</ul>
 
-<li><a href='velocity.html'>Wicket Velocity</a> - use <a href='http://velocity.apache.org'>Velocity</a> templates in your Wicket application</li>
+<h2 id='integrations_with_other_template_engines'>Integrations with other template engines</h2>
+
+<ul>
+<li><a href='velocity.html'>Wicket integration for Apache Velocity</a> - use <a href='http://velocity.apache.org'>Velocity</a> templates in your Wicket application</li>
 </ul>
 		</div>
         <div id="clearer"></div>
