--- a/index.html
+++ b/index.html
@@ -164,6 +164,22 @@
 
 <p>Wicket is released under the <a href='http://www.apache.org/licenses/LICENSE-2.0.html'>Apache License, Version 2.0</a>.</p>
 
+<h1 id='wicket_15rc42_released'><a href='/2011/05/11/wicket-1.5-RC4.2-released.html'>Wicket 1.5-RC4.2 released</a></h1>
+<p>The Wicket Team is proud to introduce the fourth Release Candidate in Wicket 1.5 series. See the changelog for the list of bug fixes and improvements done between 1.5-RC3 and 1.5-RC4.2</p><p>More detailed migration notes are available on our <a href='https://cwiki.apache.org/WICKET/migration-to-wicket-15.html'>Migrate to 1.5 Wiki Page</a></p><p>Release Artifacts:</p><ul>
+<li><a href='http://svn.apache.org/repos/asf/wicket/releases/wicket-1.5-RC4.2'>Subversion tag</a></li>
+
+<li><a href='https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12310561&amp;version=12316330'>Changelog</a></li>
+
+<li>To use in Maven:</li>
+</ul><div class='highlight'><pre><code class='xml'><span class='nt'>&lt;dependency&gt;</span>
+    <span class='nt'>&lt;groupId&gt;</span>org.apache.wicket<span class='nt'>&lt;/groupId&gt;</span>
+    <span class='nt'>&lt;artifactId&gt;</span>wicket-core<span class='nt'>&lt;/artifactId&gt;</span>
+    <span class='nt'>&lt;version&gt;</span>1.5-RC4.2<span class='nt'>&lt;/version&gt;</span>
+<span class='nt'>&lt;/dependency&gt;</span>
+</code></pre>
+</div><ul>
+<li>Download the <a href='http://www.apache.org/dyn/closer.cgi/wicket/1.5-RC4.2'>full distribution</a> (including source)</li>
+</ul>
 <h1 id='wicket_15rc3_released'><a href='/2011/04/02/wicket-1.5-RC3-released.html'>Wicket 1.5-RC3 released</a></h1>
 <p>The Wicket Team is proud to introduce the third Release Candidate in Wicket 1.5 series. See the changelog for the list of bug fixes and improvements done between 1.5-rc2 and 1.5-RC3</p><p>More detailed migration notes are available on our <a href='https://cwiki.apache.org/WICKET/migration-to-wicket-15.html'>Migrate to 1.5 Wiki Page</a></p><p>Release Artifacts:</p><ul>
 <li><a href='http://svn.apache.org/repos/asf/wicket/releases/wicket-1.5-RC3'>Subversion tag</a></li>
@@ -179,23 +195,13 @@
 </code></pre>
 </div><ul>
 <li>Download the <a href='http://www.apache.org/dyn/closer.cgi/wicket/1.5-RC3'>full distribution</a> (including source)</li>
-</ul>
-<h1 id='wicket_1417_released'><a href='/2011/04/02/wicket-1.4.17-released.html'>Wicket 1.4.17 released</a></h1>
-<p>This is seventeenth release of the Wicket 1.4.x series. This is primarily a minor bugfix release on the 1.4.x (stable) branch.</p><ul>
-<li><a href='http://svn.apache.org/repos/asf/wicket/releases/wicket-1.4.17'>Subversion tag</a></li>
-
-<li><a href='https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12310561&amp;version=12316219'>Changelog</a></li>
-
-<li>To use in Maven:</li>
-</ul><div class='highlight'><pre><code class='xml'><span class='nt'>&lt;dependency&gt;</span>
-    <span class='nt'>&lt;groupId&gt;</span>org.apache.wicket<span class='nt'>&lt;/groupId&gt;</span>
-    <span class='nt'>&lt;artifactId&gt;</span>wicket<span class='nt'>&lt;/artifactId&gt;</span>
-    <span class='nt'>&lt;version&gt;</span>1.4.17<span class='nt'>&lt;/version&gt;</span>
-<span class='nt'>&lt;/dependency&gt;</span>
-</code></pre>
-</div><ul>
-<li>Download the <a href='http://www.apache.org/dyn/closer.cgi/wicket/1.4.17'>full distribution</a> (including source)</li>
 </ul><h1>Older news items</h1><ul>
+
+
+<li>
+	<a href='/2011/04/02/wicket-1.4.17-released.html'>Wicket 1.4.17 released</a> - <span>02 Apr 2011</span><br />
+	This is seventeenth release of the Wicket 1.4.x series. This is primarily a minor bugfix release on the 1.4.x (stable) branch. Subversion tag Changelog To...
+	<a href='/2011/04/02/wicket-1.4.17-released.html'>more</a></li>
 
 
 <li>
@@ -250,12 +256,6 @@
 	<a href='/2010/11/01/wicket-1.4.13-released.html'>Wicket 1.4.13 released</a> - <span>01 Nov 2010</span><br />
 	This is thirteenth release of the Wicket 1.4.x series. This is primarily a minor bugfix release on the 1.4.x (stable) branch. Subversion tag Changelog To...
 	<a href='/2010/11/01/wicket-1.4.13-released.html'>more</a></li>
-
-
-<li>
-	<a href='/2010/09/17/wicket.1.5-M2.1-released.html'>Wicket 1.5-M2.1 released</a> - <span>17 Sep 2010</span><br />
-	This is the second milestone of the new 1.5.x Wicket series. The focus of 1.5.x is to provide our users with a more powerful and...
-	<a href='/2010/09/17/wicket.1.5-M2.1-released.html'>more</a></li>
 
 </ul>
 <h1 id='books_about_wicket'>Books about Wicket</h1>
