--- a/start/quickstart.html
+++ b/start/quickstart.html
@@ -177,7 +177,10 @@
 		else
 			cmd = 'mvn archetype:generate -DarchetypeGroupId=org.apache.wicket -DarchetypeArtifactId=wicket-archetype-quickstart -DarchetypeVersion=' + version + ' -DgroupId=' + groupId + ' -DartifactId=' + artifactId;						
 
-		if (version.match(/.*SNAPSHOT/)) cmd += ' -DarchetypeRepository=https://repository.apache.org/content/repositories/snapshots/'; 
+		if (version.match(/.*SNAPSHOT/))
+			cmd += ' -DarchetypeRepository=https://repository.apache.org/content/repositories/snapshots/';
+		else
+			cmd += ' -DarchetypeRepository=https://repository.apache.org/';
 		cmd += ' -DinteractiveMode=false'; 
 		document.getElementById("cmdLine").value = cmd;
 	}
