--- a/index.html
+++ b/index.html
@@ -164,24 +164,30 @@
 
 <p>Wicket is released under the <a href='http://www.apache.org/licenses/LICENSE-2.0.html'>Apache License, Version 2.0</a>.</p>
 
-<h1 id='apache_wicket_cookbook_giveaway_contest'><a href='/2011/05/17/wicket-cookbook-contest.html'>Apache Wicket Cookbook Giveaway Contest</a></h1>
-<img title='Apache Wicket Cookbook' src='http://wicket.apache.org/learn/books/awc.png' height='111' alt='' style='float: left; margin-left: 10px; margin-right: 10px;' width='90' /><p>Packt Publishing has generously allowed me to give away a free copy of the ebook version of <a href='http://link.packtpub.com/AzN8N9'><strong>Apache Wicket Cookbook</strong></a> (http://link.packtpub.com/AzN8N9), and a <strong>free one year subscription</strong> to PacktLib. For details see the <a href='http://wicketinaction.com/2011/05/apache_wicket_cookbook_giveaway_contest'>contest announcement</a>.</p><p>Cheers,<br /> -Igor <br /><br /><br /><br /><br /><br /></p>
-<h1 id='wicket_15rc42_released'><a href='/2011/05/11/wicket-1.5-RC4.2-released.html'>Wicket 1.5-RC4.2 released</a></h1>
-<p>The Wicket Team is proud to introduce the fourth Release Candidate in Wicket 1.5 series. See the changelog for the list of bug fixes and improvements done between 1.5-RC3 and 1.5-RC4.2</p><p>More detailed migration notes are available on our <a href='https://cwiki.apache.org/WICKET/migration-to-wicket-15.html'>Migrate to 1.5 Wiki Page</a></p><p>Release Artifacts:</p><ul>
-<li><a href='http://svn.apache.org/repos/asf/wicket/releases/wicket-1.5-RC4.2'>Subversion tag</a></li>
+<h1 id='wicket_15rc51_released'><a href='/2011/06/25/wicket-1.5-RC5.1-released.html'>Wicket 1.5-RC5.1 released</a></h1>
+<p>The Wicket Team is proud to introduce the fourth Release Candidate in Wicket 1.5 series. See the changelog for the list of bug fixes and improvements done between 1.5-RC4.2 and 1.5-RC5.1</p><p>More detailed migration notes are available on our <a href='https://cwiki.apache.org/WICKET/migration-to-wicket-15.html'>Migrate to 1.5 Wiki Page</a></p><p>Release Artifacts:</p><ul>
+<li><a href='http://svn.apache.org/repos/asf/wicket/releases/wicket-1.5-RC5.1'>Subversion tag</a></li>
 
-<li><a href='https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12310561&amp;version=12316330'>Changelog</a></li>
+<li><a href='https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12310561&amp;version=12316423'>Changelog</a></li>
 
 <li>To use in Maven:</li>
 </ul><div class='highlight'><pre><code class='xml'><span class='nt'>&lt;dependency&gt;</span>
     <span class='nt'>&lt;groupId&gt;</span>org.apache.wicket<span class='nt'>&lt;/groupId&gt;</span>
     <span class='nt'>&lt;artifactId&gt;</span>wicket-core<span class='nt'>&lt;/artifactId&gt;</span>
-    <span class='nt'>&lt;version&gt;</span>1.5-RC4.2<span class='nt'>&lt;/version&gt;</span>
+    <span class='nt'>&lt;version&gt;</span>1.5-RC5.1<span class='nt'>&lt;/version&gt;</span>
 <span class='nt'>&lt;/dependency&gt;</span>
 </code></pre>
 </div><ul>
-<li>Download the <a href='http://www.apache.org/dyn/closer.cgi/wicket/1.5-RC4.2'>full distribution</a> (including source)</li>
-</ul><h1>Older news items</h1><ul>
+<li>Download the <a href='http://www.apache.org/dyn/closer.cgi/wicket/1.5-RC5.1'>full distribution</a> (including source)</li>
+</ul>
+<h1 id='apache_wicket_cookbook_giveaway_contest'><a href='/2011/05/17/wicket-cookbook-contest.html'>Apache Wicket Cookbook Giveaway Contest</a></h1>
+<img title='Apache Wicket Cookbook' src='http://wicket.apache.org/learn/books/awc.png' height='111' alt='' style='float: left; margin-left: 10px; margin-right: 10px;' width='90' /><p>Packt Publishing has generously allowed me to give away a free copy of the ebook version of <a href='http://link.packtpub.com/AzN8N9'><strong>Apache Wicket Cookbook</strong></a> (http://link.packtpub.com/AzN8N9), and a <strong>free one year subscription</strong> to PacktLib. For details see the <a href='http://wicketinaction.com/2011/05/apache_wicket_cookbook_giveaway_contest'>contest announcement</a>.</p><p>Cheers,<br /> -Igor <br /><br /><br /><br /><br /><br /></p><h1>Older news items</h1><ul>
+
+
+<li>
+	<a href='/2011/05/11/wicket-1.5-RC4.2-released.html'>Wicket 1.5-RC4.2 released</a> - <span>11 May 2011</span><br />
+	The Wicket Team is proud to introduce the fourth Release Candidate in Wicket 1.5 series. See the changelog for the list of bug fixes and...
+	<a href='/2011/05/11/wicket-1.5-RC4.2-released.html'>more</a></li>
 
 
 <li>
@@ -236,12 +242,6 @@
 	<a href='/2010/11/21/pedro-santos-committer.html'>Pedro Santos is a Wicket team member</a> - <span>21 Nov 2010</span><br />
 	Pedro Santos has been added as a committer and PMC member for Apache Wicket. Pedro has been increasingly active in the Wicket community in recent...
 	<a href='/2010/11/21/pedro-santos-committer.html'>more</a></li>
-
-
-<li>
-	<a href='/2010/11/05/wicket-1.5-M3-released.html'>Wicket 1.5-M3 released</a> - <span>05 Nov 2010</span><br />
-	This is another milestone release from trunk (in-development branch). This release includes several enhancments and fixes, which can be seen in the changelog (linked below)....
-	<a href='/2010/11/05/wicket-1.5-M3-released.html'>more</a></li>
 
 </ul>
 <h1 id='books_about_wicket'>Books about Wicket</h1>
